# chamber-of-secrets

./: .editorconfig  .env.example  .gitignore  AGENTS.md  FEATURES.md  README.md  ROADMAP.md  TODOS.md  biome.jsonc  compose.yaml  justfile
.zed/: settings.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_category_restock_policy.py  4564aa576733_initial.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: analytics.py  categories.py  products.py  transactions.py
backend/app/services/: ean_lookup.py  restock.py
backend/fixtures/: food_catalog.json
backend/scripts/: seed.py
backend/tests/: test_backend_api.py  test_migrations.py
certs/: .gitignore
frontend/: .prettierrc  .prettierrc.json  40-setup-certs.sh  Dockerfile  biome.jsonc  nginx.conf  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts
frontend/src/lib/: theme.ts
frontend/src/lib/api/: client.test.ts  client.ts
frontend/src/lib/components/: BarcodeScanner.svelte  CategoryPicker.svelte  DrillDownDonut.svelte  FuzzySearchOverlay.svelte  LocaleSwitcher.svelte  Modal.svelte  Select.svelte
frontend/src/lib/i18n/: de.json  en.json  i18n.test.ts  index.ts
frontend/src/lib/utils/: analytics.test.ts  analytics.ts  category.test.ts  category.ts  scan.test.ts  (+1 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/static/: site.webmanifest
scripts/: setup-certs.sh
(+6 files in other folders)
